# rgitstats

./: Cargo.toml  Cross.toml  LICENSE  readme.md  version
.github/workflows/: deploy.yml
.shiba/: commit-msg  pre-commit
src/: main.rs
src/domain/: mod.rs
src/git/: mod.rs
src/io/: mod.rs
src/lists/: mod.rs
src/parser/: mod.rs
src/strings/: mod.rs
