[package]
name = "rgitstats"
version = "0.1.0"
homepage = "https://github.com/matthiaskainer/rgitstats"
repository = "https://github.com/matthiaskainer/rgitstats"
license-file = "LICENSE"
readme = "Readme.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
shiba = "0.1.0"

[dependencies]
clap = "4.4.11"
git2 = "0.18.1"
prettytable = "0.10.0"
