[package]
name = "rgitstats"
version = "0.1.4"
homepage = "https://github.com/matthiaskainer/rgitstats"
repository = "https://github.com/matthiaskainer/rgitstats"
license-file = "LICENSE"
readme = "Readme.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
shiba = "0.1.1"
assert_cmd = "2.0.12"
predicates = "3.0.4"

[dependencies]
clap = "4.4.11"
git2 = "0.18.1"
is-terminal = "0.4.9"
prettytable = "0.10.0"
